Added Geofencing API on Backend

--- a/backend/src/main/webapp/index.html
+++ b/backend/src/main/webapp/index.html
@@ -29,6 +29,8 @@
                         <li>
                             <a href="https://github.com/GoogleCloudPlatform/gradle-appengine-templates/tree/master/GcmEndpoints">Connecting
                                 your Android application to this backend</a></li>
+                        <li><a href="addFence.html">Add fence</a></li>
+                        <li><a href="query.html">Query</a></li>
                     </ul>
                 </li>
                 <li><a href="/_ah/api/explorer">Google Cloud Endpoints API Explorer</a></li>
